--- a/src/styles/Carta.css
+++ b/src/styles/Carta.css
@@ -25,5 +25,9 @@
 }
 
 .cardBody {
-    background-color: rgb(255,204,183);
+    /* background-color: rgb(50, 13, 198); */
+    /* background: rgb(255,241,218);
+background: linear-gradient(180deg, rgba(255,241,218,1) 52%, rgba(250,203,163,0.9864320728291317) 100%, rgba(255,243,208,1) 100%, rgba(226,218,194,1) 100%); */
+background: rgb(238,212,149);
+background: linear-gradient(84deg, rgba(238,212,149,1) 0%, rgba(252,242,212,1) 45%, rgba(255,234,201,1) 77%);
 }
