--- a/src/styles/Hover.css
+++ b/src/styles/Hover.css
@@ -32,7 +32,7 @@
   }
   
   .imagen-hover:hover img{
-    transform: rotateY(180deg);
+    transform: rotateY(180deg) scale(1.2);
     /* background-color: wheat; */
     background: rgba(0, 0, 0, .4);
     opacity: 0;
